--- a/multimedia.html
+++ b/multimedia.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Multimedia</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=515078490"/>
   <link rel="stylesheet" type="text/css" href="css/multimedia.css?crc=4243278855" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -106,9 +106,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1040" href="actividades.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1041-4"><!-- content --><p>Actividades</p></div><div class="grpelem" id="u1042"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1044"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1045"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056" href="actividad-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063" href="actividad-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047" href="actividad-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></a></li>
           </ul>
          </div>
         </div>
