--- a/actividad-2.html
+++ b/actividad-2.html
@@ -10,15 +10,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "actividad-2.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "musewpdisclosure.js", "actividad-2.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=4123430645"/>
   <title>Actividad 2</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
-  <link rel="stylesheet" type="text/css" href="css/actividad-2.css?crc=4294652048" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=515078490"/>
+  <link rel="stylesheet" type="text/css" href="css/actividad-2.css?crc=167479167" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -88,9 +88,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1040" href="actividades.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1041-4"><!-- content --><p>Actividades</p></div><div class="grpelem" id="u1042"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1044"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1045"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056" href="actividad-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u1063" href="actividad-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047" href="actividad-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></a></li>
           </ul>
          </div>
         </div>
@@ -104,8 +104,40 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
+    <div class="browser_width grpelem" id="u2806-bw">
+     <div id="u2806"><!-- simple frame --></div>
+    </div>
+    <div class="TabbedPanelsWidget clearfix grpelem" id="tab-panelu2694"><!-- vertical box -->
+     <div class="TabbedPanelsTabGroup clearfix colelem" id="u2695"><!-- horizontal box -->
+      <div class="TabbedPanelsTab clearfix grpelem" id="u2696"><!-- horizontal box -->
+       <div class="NoWrap clearfix grpelem" id="u2697-4"><!-- content -->
+        <p>Crucigrama</p>
+       </div>
+      </div>
+      <div class="TabbedPanelsTab clearfix grpelem" id="u2700"><!-- horizontal box -->
+       <div class="NoWrap clearfix grpelem" id="u2702-4"><!-- content -->
+        <p>Armar Grupo</p>
+       </div>
+      </div>
+     </div>
+     <div class="TabbedPanelsContentGroup clearfix colelem" id="u2704"><!-- stack box -->
+      <div class="TabbedPanelsContent clearfix grpelem" id="u2707"><!-- group -->
+       <div class="grpelem" id="u2746"><!-- custom html -->
+        <iframe src='https://es.educaplay.com/es/recursoseducativos/3310080/html5/sopa_de_letras_conexion_bd_sql.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/3310080/sopa_de_letras_conexion_bd_sql.htm'>Sopa de Letras Conexión BD SQL</a>
+       </div>
+      </div>
+      <div class="TabbedPanelsContent invi clearfix grpelem" id="u2705"><!-- group -->
+       <div class="grpelem" id="u2750"><!-- custom html -->
+        <iframe src='https://es.educaplay.com/es/recursoseducativos/3310089/html5/relacionar_conexion_bd_sql.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/3310089/relacionar_conexion_bd_sql.htm'>Relacionar Conexión BD SQL</a>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="clearfix grpelem" id="u2709-5"><!-- content -->
+     <p id="u2709-3"><span class="subtitulos" id="u2709">Actividad 2: </span><span class="contenido" id="u2709-2">A continuación se muestran dos actividades para que sean desarrolladas con el fin de aumentar los conocimientos, sopa de letras, armar grupos.</span></p>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="1009" data-content-above-spacer="1009" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
@@ -140,7 +172,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu","webpro","musewpdisclosure"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
@@ -148,6 +180,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('#tab-panelu2694', ['#bp_infinity'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:0}); });/* #tab-panelu2694 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
