--- a/actividad-3.html
+++ b/actividad-3.html
@@ -10,15 +10,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "actividad-3.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "musewpdisclosure.js", "actividad-3.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=4123430645"/>
   <title>Actividad 3</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
-  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=4294652048" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=515078490"/>
+  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=4097827820" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -38,8 +38,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <div class="clearfix colelem" id="pu2769-5"><!-- group -->
+        <div class="clearfix grpelem" id="u2769-5"><!-- content -->
+         <p id="u2769-3"><span class="subtitulos" id="u2769">Actividad 3: </span><span class="contenido" id="u2769-2">A continuación se muestran dos actividades para que sean desarrolladas con el fin de aumentar los conocimientos, relacionar columnas y una adivinanza.</span></p>
+        </div>
+        <div class="grpelem" id="u1731"><!-- custom html -->
+         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
        </div>
        <div class="clearfix colelem" id="pu2394"><!-- group -->
         <div class="clearfix grpelem" id="u2394"><!-- group -->
@@ -88,9 +93,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1040" href="actividades.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1041-4"><!-- content --><p>Actividades</p></div><div class="grpelem" id="u1042"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1044"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1045"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056" href="actividad-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063" href="actividad-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u1047" href="actividad-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></a></li>
           </ul>
          </div>
         </div>
@@ -104,8 +109,37 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
+    <div class="browser_width grpelem" id="u2809-bw">
+     <div id="u2809"><!-- simple frame --></div>
+    </div>
+    <div class="TabbedPanelsWidget clearfix grpelem" id="tab-panelu2812"><!-- vertical box -->
+     <div class="TabbedPanelsTabGroup clearfix colelem" id="u2818"><!-- horizontal box -->
+      <div class="TabbedPanelsTab clearfix grpelem" id="u2819"><!-- horizontal box -->
+       <div class="NoWrap clearfix grpelem" id="u2822-4"><!-- content -->
+        <p>Relacionar Columnas</p>
+       </div>
+      </div>
+      <div class="TabbedPanelsTab clearfix grpelem" id="u2823"><!-- horizontal box -->
+       <div class="NoWrap clearfix grpelem" id="u2824-4"><!-- content -->
+        <p>Adivinanza</p>
+       </div>
+      </div>
+     </div>
+     <div class="TabbedPanelsContentGroup clearfix colelem" id="u2813"><!-- stack box -->
+      <div class="TabbedPanelsContent invi clearfix grpelem" id="u2814"><!-- group -->
+       <div class="grpelem" id="u2861"><!-- custom html -->
+        <iframe src='https://es.educaplay.com/es/recursoseducativos/3310134/html5/relacionar_columnas_bd_php.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/3310134/relacionar_columnas_bd_php.htm'>Relacionar Columnas BD PHP</a>
+       </div>
+      </div>
+      <div class="TabbedPanelsContent clearfix grpelem" id="u2816"><!-- group -->
+       <div class="grpelem" id="u2865"><!-- custom html -->
+        <iframe src='https://es.educaplay.com/es/recursoseducativos/3310155/html5/adivinanza_conexion_sql_php.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/3310155/adivinanza_conexion_sql_php.htm'>Adivinanza Conexion SQL PHP</a>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="1043" data-content-above-spacer="1043" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
@@ -140,7 +174,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu","webpro","musewpdisclosure"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
@@ -148,6 +182,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('#tab-panelu2812', ['#bp_infinity'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:1}); });/* #tab-panelu2812 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
