--- a/actividades.html
+++ b/actividades.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Actividades</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
-  <link rel="stylesheet" type="text/css" href="css/actividades.css?crc=4294652048" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=515078490"/>
+  <link rel="stylesheet" type="text/css" href="css/actividades.css?crc=83310244" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -38,19 +38,38 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-       </div>
-       <div class="clearfix colelem" id="pu2394"><!-- group -->
-        <div class="clearfix grpelem" id="u2394"><!-- group -->
-         <div class="clearfix grpelem" id="u2391-4"><!-- content -->
-          <p id="u2391-2"><span class="subtitulos" id="u2391">Total de Visitas</span></p>
+       <div class="clearfix colelem" id="ppu1731"><!-- group -->
+        <div class="clearfix grpelem" id="pu1731"><!-- column -->
+         <div class="colelem" id="u1731"><!-- custom html -->
+          <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
          </div>
-        </div>
-        <div class="grpelem" id="u2387"><!-- custom html -->
-         <div id="sfc38xhp8149czy6syfhz4sef9f7fwhn9xd"></div>
+         <div class="clearfix colelem" id="pu2394"><!-- group -->
+          <div class="clearfix grpelem" id="u2394"><!-- group -->
+           <div class="clearfix grpelem" id="u2391-4"><!-- content -->
+            <p id="u2391-2"><span class="subtitulos" id="u2391">Total de Visitas</span></p>
+           </div>
+          </div>
+          <div class="grpelem" id="u2387"><!-- custom html -->
+           <div id="sfc38xhp8149czy6syfhz4sef9f7fwhn9xd"></div>
 <script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=38xhp8149czy6syfhz4sef9f7fwhn9xd&down=async" async></script>
 <noscript><a href="https://www.contadorvisitasgratis.com" title="contador para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=38xhp8149czy6syfhz4sef9f7fwhn9xd" border="0" title="contador para blogger" alt="contador para blogger"></a></noscript>
+          </div>
+         </div>
+        </div>
+        <div class="clearfix grpelem" id="u2667-14"><!-- content -->
+         <p>&nbsp;</p>
+         <p id="u2667-3"><span class="T-tulos" id="u2667-2">Actividades</span></p>
+         <p id="u2667-4">&nbsp;</p>
+         <p id="u2667-6"><span class="contenido" id="u2667-5">Estimados estudiantes a continuación se les invita a desarrollar las 6 actividades propuestas 2 por página, con el fin que aumenten los conocimientos sobre el tema que se viene tratando.</span></p>
+         <p id="u2667-7">&nbsp;</p>
+         <p id="u2667-9"><span class="contenido" id="u2667-8">Puede realizar los test, quiz, sopas de letras, crucigramas las veces que considere necesario sin que esto afecte su calificación.</span></p>
+         <p id="u2667-10">&nbsp;</p>
+         <p id="u2667-11">&nbsp;</p>
+         <p id="u2667-12">&nbsp;</p>
+        </div>
+        <div class="grpelem" id="u2682"><!-- simple frame --></div>
+        <div class="clip_frame grpelem" id="u2685"><!-- image -->
+         <img class="block" id="u2685_img" src="images/imagen%20pegada%20640x425.jpg?crc=78221681" alt="" width="513" height="341"/>
         </div>
        </div>
       </div>
@@ -88,9 +107,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1040" href="actividades.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1041-4"><!-- content --><p>Actividades</p></div><div class="grpelem" id="u1042"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1044"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1045"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056" href="actividad-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063" href="actividad-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047" href="actividad-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></a></li>
           </ul>
          </div>
         </div>
@@ -105,7 +124,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="773" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
