--- a/autores.html
+++ b/autores.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Autores</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
-  <link rel="stylesheet" type="text/css" href="css/autores.css?crc=4275923592" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=515078490"/>
+  <link rel="stylesheet" type="text/css" href="css/autores.css?crc=250920836" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -65,8 +65,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u2449-6">&nbsp;</p>
         </div>
         <ul class="AccordionWidget clearfix grpelem" id="accordionu2452"><!-- vertical box -->
-         <li class="AccordionPanel clearfix colelem" id="u2453"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem" id="u2454-4"><!-- content --><p id="u2454-2"><span class="T-tulos" id="u2454">Autores:</span></p></div><div class="AccordionPanelContent disn clearfix colelem" id="u2455"><!-- group --><div class="clearfix grpelem" id="u2456-15"><!-- content --><p id="u2456">&nbsp;</p><p id="u2456-2">&nbsp;</p><p id="u2456-4"><span class="subtitulos" id="u2456-3">Nombre:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mauricio Berrio Franco</span></p><p id="u2456-6"><span class="subtitulos" id="u2456-5">Código:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 18493284</span></p><p id="u2456-8"><span class="subtitulos" id="u2456-7">Programa:&nbsp;&nbsp;&nbsp; Ingeniería de Sistemas</span></p><p id="u2456-10"><span class="subtitulos" id="u2456-9">e-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; mabefra@gmail.com</span></p><p id="u2456-12"><span class="subtitulos" id="u2456-11">Skype:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; maobefra</span></p><p id="u2456-13">&nbsp;</p></div></div></li>
-         <li class="AccordionPanel clearfix colelem" id="u2461"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem" id="u2462-4"><!-- content --><p>Fotos</p></div><div class="AccordionPanelContent clearfix colelem" id="u2463"><!-- group --><div class="grpelem" id="u2491"><!-- simple frame --></div></div></li>
+         <li class="AccordionPanel clearfix colelem" id="u2453"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem" id="u2454-4"><!-- content --><p id="u2454-2"><span class="T-tulos" id="u2454">Autores:</span></p></div><div class="AccordionPanelContent clearfix colelem" id="u2455"><!-- group --><div class="clearfix grpelem" id="u2456-15"><!-- content --><p id="u2456">&nbsp;</p><p id="u2456-2">&nbsp;</p><p id="u2456-4"><span class="subtitulos" id="u2456-3">Nombre:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mauricio Berrio Franco</span></p><p id="u2456-6"><span class="subtitulos" id="u2456-5">Código:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 18493284</span></p><p id="u2456-8"><span class="subtitulos" id="u2456-7">Programa:&nbsp;&nbsp;&nbsp; Ingeniería de Sistemas</span></p><p id="u2456-10"><span class="subtitulos" id="u2456-9">e-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; mabefra@gmail.com</span></p><p id="u2456-12"><span class="subtitulos" id="u2456-11">Skype:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; maobefra</span></p><p id="u2456-13">&nbsp;</p></div></div></li>
+         <li class="AccordionPanel clearfix colelem" id="u2461"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem" id="u2462-4"><!-- content --><p>Fotos</p></div><div class="AccordionPanelContent disn clearfix colelem" id="u2463"><!-- group --><div class="grpelem" id="u2491"><!-- simple frame --></div></div></li>
         </ul>
        </div>
       </div>
@@ -104,9 +104,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1040" href="actividades.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1041-4"><!-- content --><p>Actividades</p></div><div class="grpelem" id="u1042"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1044"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1045"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1053"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1056" href="actividad-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1058-4"><!-- content --><p>Actividad 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1060"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1063" href="actividad-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1064-4"><!-- content --><p>Actividad 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1046"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1047" href="actividad-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1049-4"><!-- content --><p>Actividad 3</p></div></a></li>
           </ul>
          </div>
         </div>
@@ -163,7 +163,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('#accordionu2452', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:false,defaultIndex:1}); });/* #accordionu2452 */
+Muse.Utils.initWidget('#accordionu2452', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:false,defaultIndex:0}); });/* #accordionu2452 */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
