--- a/actividad-2.html
+++ b/actividad-2.html
@@ -10,15 +10,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "musewpdisclosure.js", "actividad-2.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "require.js", "actividad-2.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=4123430645"/>
   <title>Actividad 2</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=515078490"/>
-  <link rel="stylesheet" type="text/css" href="css/actividad-2.css?crc=167479167" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4158065502"/>
+  <link rel="stylesheet" type="text/css" href="css/actividad-2.css?crc=440832218" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -111,7 +111,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="TabbedPanelsTabGroup clearfix colelem" id="u2695"><!-- horizontal box -->
       <div class="TabbedPanelsTab clearfix grpelem" id="u2696"><!-- horizontal box -->
        <div class="NoWrap clearfix grpelem" id="u2697-4"><!-- content -->
-        <p>Crucigrama</p>
+        <p>Sopa de Letras</p>
        </div>
       </div>
       <div class="TabbedPanelsTab clearfix grpelem" id="u2700"><!-- horizontal box -->
