--- a/actividad-3.html
+++ b/actividad-3.html
@@ -10,7 +10,7 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "musewpdisclosure.js", "actividad-3.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "require.js", "actividad-3.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=4123430645"/>
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=515078490"/>
-  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=4097827820" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=308757825" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -139,7 +139,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1043" data-content-above-spacer="1043" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="1021" data-content-above-spacer="1020" data-content-below-spacer="116"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
